--- a/answer/css/index.css
+++ b/answer/css/index.css
@@ -1,15 +1,60 @@
+body {
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    background: rgb(48, 156, 228) url(../imgs/bo_b.jpg) no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+}
+
+.musicPlayWrap {
+    position: absolute;
+    top: 2vw;
+    right: 3vw;
+    z-index: 99999;
+    width: 10vw;
+    height: 10vw;
+    background-image: url(../imgs/music.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+@-webkit-keyframes rotating {
+    0% {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+@keyframes rotating {
+    0% {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.rotate {
+    -webkit-animation: rotating 1.2s linear infinite;
+    animation: rotating 1.2s linear infinite;
+}
+
 .gameTraiWrap {
     position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    width: 100vw;
+    width: 200vw;
     height: 100vh;
-    background: rgb(48, 156, 228) url(../imgs/bo_b.jpg) no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
     overflow: hidden;
+    transition: all 0.5s ease;
+    transform: translateX(0);
     z-index: 888;
 }
 
@@ -25,8 +70,8 @@
     background-size: 100% 100%;
     background-position: center;
     overflow: hidden;
-    transition: 'all 0.4s ease';
-    transform: 'translateY(0)';
+    transition: all 0.6s ease;
+    transform: translateY(0);
     z-index: 999;
 }
 
