--- a/answer/css/index.css
+++ b/answer/css/index.css
@@ -44,8 +44,19 @@ body {
     animation: rotating 1.2s linear infinite;
 }
 
-.gameTraiWrap {
+.gameTraiWrapLimit {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.gameTraiWrap {
+    position: relative;
     top: 0;
     bottom: 0;
     right: 0;
@@ -56,6 +67,7 @@ body {
     transition: all 0.5s ease;
     transform: translateX(0);
     z-index: 888;
+    display: none;
 }
 
 .gameStartPage {
@@ -65,7 +77,6 @@ body {
     right: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
     background: rgb(48, 156, 228) url(../imgs/bg_1.jpg) no-repeat;
     background-size: 100% 100%;
     background-position: center;
@@ -90,12 +101,13 @@ body {
     transition: all 0.6s ease;
     transform: translateY(-100vh);
     z-index: 999;
+    display: none;
 }
 
 .gameStartTitle {
     position: absolute;
     width: 60vw;
-    top: 16vh;
+    top: 80px;
     left: 20vw;
 }
 
@@ -110,8 +122,8 @@ body {
     content: '';
     position: absolute;
     width: 96vw;
-    height: 26vh;
-    top: -9vh;
+    height: 160px;
+    top: -54px;
     left: -18vw;
     background: url(../imgs/bg_title.png) no-repeat;
     background-size: 100% 100%;
@@ -121,14 +133,14 @@ body {
 
 .gameStartMinLuoboImg {
     position: absolute;
-    height: 6vh;
-    top: 35vh;
+    height: 40px;
+    top: 194px;
     left: calc((20vw - 20px) / 2 + 30px);
 }
 
 .startInput {
     position: absolute;
-    top: 36vh;
+    top: 200px;
     left: calc((20vw - 20px) / 2);
     width: 80vw;
     padding: 20px 10px;
@@ -168,7 +180,7 @@ body {
 }
 
 .phoneInput {
-    top: 43.8vh;
+    top: 256px;
 }
 
 .gameStartGuize {
@@ -199,27 +211,21 @@ body {
 
 .gameStart {
     position: absolute;
-    bottom: 10vh;
-    left: calc((100vw - 11vw) / 2);
-}
-
-.gameStart::before {
-    content: '';
-    position: absolute;
-    width: 34vw;
-    height: 50vh;
-    top: -10.8vh;
-    left: -11.3vw;
+    bottom: -20px;
+    left: calc((100vw - 26vw) / 2);
+    width: 26vw;
+    height: 240px;
+    text-align: center;
     background: url(../imgs/luobo.png) no-repeat;
     background-size: 100% 100%;
     background-position: center;
-    z-index: 9;
 }
 
 .gameStart>img {
     position: relative;
-    display: block;
-    width: 11vw;
+    display: inline-block;
+    height: 40%;
+    top: 60px;
     z-index: 10;
 }
 
@@ -248,6 +254,112 @@ body {
     display: block;
     width: 14vw;
     z-index: 10;
+}
+
+.gameEndTitle {
+    position: absolute;
+    width: 60vw;
+    top: 30vh;
+    left: 20vw;
+}
+
+.gameEndTitleImg {
+    position: relative;
+    display: block;
+    width: 55vw;
+    z-index: 10;
+}
+
+.gameEndTitle::before {
+    content: '';
+    position: absolute;
+    width: 96vw;
+    height: 26vh;
+    top: -9vh;
+    left: -18vw;
+    background: url(../imgs/bg_title.png) no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+    z-index: 9;
+}
+
+.gameEndToCJ {
+    position: absolute;
+    width: 90vw;
+    height: 6.4vh;
+    line-height: 5.4vh;
+    top: 56vh;
+    left: 5vw;
+    display: block;
+    text-align: center;
+    background: url(../imgs/bg_text.png) no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #ffffff;
+    text-shadow: #090404 1px 0 0, #090404 0 1px 0, #090404 -1px 0 0, #090404 0 -1px 0;
+    -webkit-text-shadow: #090404 1px 0 0, #090404 0 1px 0, #090404 -1px 0 0, #090404 0 -1px 0;
+    -moz-text-shadow: #090404 1px 0 0, #090404 0 1px 0, #090404 -1px 0 0, #090404 0 -1px 0;
+    *filter: Glow(color=#090404, strength=1);
+}
+
+.routePaneTitle {
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    width: calc(100% - 20px);
+    text-align: center;
+    font-size: 20px;
+}
+
+.routePaneTitle::before {
+    content: '';
+    position: absolute;
+    top: 14px;
+    left: 12px;
+    width: 50px;
+    height: 2px;
+    background: beige;
+}
+
+.routePaneTitle::after {
+    content: '';
+    position: absolute;
+    top: 14px;
+    right: 12px;
+    width: 50px;
+    height: 2px;
+    background: beige;
+}
+
+.jiangPaneTitle {
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    width: calc(100% - 20px);
+    text-align: center;
+    font-size: 20px;
+}
+
+.jiangPaneTitle::before {
+    content: '';
+    position: absolute;
+    top: 14px;
+    left: 12px;
+    width: 50px;
+    height: 2px;
+    background: beige;
+}
+
+.jiangPaneTitle::after {
+    content: '';
+    position: absolute;
+    top: 14px;
+    right: 12px;
+    width: 50px;
+    height: 2px;
+    background: beige;
 }
 
 /* 游戏中的页面 */
